Set correct homepage

--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "maidentiedot-backend",
+  "homepage": "https://maidentiedot-backend.ahojukka5.com",
   "version": "1.0.0",
   "description": "Backend service for maidentiedot",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,12 +18,14 @@
   "bugs": {
     "url": "https://github.com/ahojukka5/maidentiedot-backend/issues"
   },
-  "homepage": "https://github.com/ahojukka5/maidentiedot-backend#readme",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
+  },
+  "engines": {
+    "node": "12."
   }
 }
