Add node as dependency

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "axios": "^0.21.0",
     "cors": "^2.8.5",
     "crossenv": "0.0.2-security",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "node": "^15.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
